se agrego el apartado de servicios en el index principal

--- a/index.html
+++ b/index.html
@@ -9,20 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>Centro de Investigación en Ciencias y Recursos GeoAgroAmbientales - Cenigaa</title>
     <link rel="stylesheet" href="./estilos.css">
-
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-    <link rel="stylesheet" href="Style.css">
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -198,6 +184,34 @@
       <a class="wrap">
         <button class="button">Ver Más</button>
       </a>
+    </div>
+
+    <div class="card-services">
+      <h1 class="heading">Nuestros Servicios</h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="/assets/imagenes/Gpro.svg" alt="Logo Gpro">
+          <h3>GPRO</h3>
+          <p>
+            Complementamos el conocimiento con diferentes herramientas para garantizar una experiencia no solo en servicio,
+            sino en el producto. Nuestro equipo cuenta con los estudios necesarios para obtener resultados de alta calidad.
+          </p>
+          <a href="#" class="btn"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" class="btn"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+
+        <div class="box">
+          <img src="/assets/imagenes/AgroBussines.svg" alt="Logo AgroBussines">
+          <h3>AGRO BUSSINESS</h3>
+          <p>
+            Agrobussines 4.0 es una plataforma tecnológica que mejora la posición del agricultor en la cadena de valor.
+            Busca implementar mecanismos de fortalecimiento, contro y trazabilidad a los factoras productivos agrícolas, acompañado de las TIcs
+            como garante del seguimiento, idoneidad y sostenibilidad de la oferta comercial nacional e internacional.
+          </p>
+          <a href="#" class="btn"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" class="btn"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
     </div>
 
     <footer class="pie-pagina">
