--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -7,7 +7,7 @@
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/jovenesInvestigadores.css">
+    <link rel="stylesheet" href="../assets/css/jovenesInvestigadores.css">
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            Cenigaa
+            <img src="../assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,37 +53,107 @@
       </div>
     </nav>
 
+    <div class="container text-center mt-5" data-aos="fade-up">
+
+      <div class="Titulo">
+          <h1>Proceso de calificacion ESAL</h1><br>
+      </div>
+          <table class="table"> 
+              <tbody>   
+                  <tr> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 1</p>
+                      </td> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 2</p>
+                      </td> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 1</p>
+                      </td> 
+                  </tr>
+                  <tr> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 1</p>
+                      </td> 
+                      <td>docs</td> 
+                      <td>docs</td> 
+                  </tr> 
+                  <tr> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 1</p>
+                      </td> 
+                      <td>docs</td> 
+                      <td>docs</td>
+                  </tr> 
+                  <tr> 
+                      <td>
+                          <a href="../assets/docs/CENIGAA.pdf" target="_blank">
+                              <img src="../assets/img/pdf.png" alt="60px" height="35px"></i>
+                          </a>
+                          <p>texto 1</p>
+                      </td>
+                      <td>docs</td>
+                      <td>docs</td> 
+                  </tr> 
+              </tbody> 
+          </table>
+      </div>
+
     <footer class="pie-pagina">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="../assets/imagenes/Cenigaa.svg" alt="Logo Cenigaa">
-                    </a>
-                </figure>
-            </div>
-            <div class="box">
-                <h2>CENIGAA</h2>
-                  <ul class="footer-links">
-                  <li><a href="../index.html">Inicio</a></li>
-                  <li><a href="calificacionESAL.html">Proceso de calificación ESAL</a></li>
-                  <li><a href="#">Servicios</a></li>
-                  <li><a href="#">Contactenos</a></li>
-                </ul>
-            </div>
-            <div class="box">
-                <h2>SIGUENOS</h2>
-                <div class="red-social">
-                  <a href="https://web.facebook.com/cenigaa"><i class="fa-brands fa-facebook-f"></i></a>
-                  <a href="https://www.instagram.com/cenigaaoficial/"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="https://www.linkedin.com/company/centrodeinvestigacion-cenigaa/"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="grupo-2">
-            <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
-        </div>
-    </footer>
+      <div class="grupo-1">
+          <div class="box">
+              <figure>
+                  <a href="#">
+                      <img src="../assets/imagenes/Cenigaa.svg" alt="Logo Cenigaa">
+                  </a>
+              </figure>
+          </div>
+          <div class="box">
+            <h2>Enlaces de Ínteres</h2>
+            <ul class="footer-links">
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="./calificacionESAL.html">Proceso de calificación ESAL</a></li>
+              <li><a href="#">Jóvenes Investigadores</a></li>
+              <li><a href="#">Investigadores</li>
+              <li><a href="#">Pasantes</a></li>
+            </ul>
+          </div>
+          <div class="box">
+            <h2>Contáctenos</h2>
+            <ul class="footer-links">
+              <li><a href="./nosotros.html">Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso., Neiva, Colombia.</a></li>
+              <li><a href="./calificacionESAL.html">info@cenigaa.org </a></li>
+              <li><a href="#">3183835434</a></li>
+            </ul>
+          </div>
+          <div class="box">
+              <h2>SIGUENOS</h2>
+              <div class="red-social">
+                <a href="https://web.facebook.com/cenigaa"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/cenigaaoficial/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/centrodeinvestigacion-cenigaa/"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+          </div>
+      </div>
+      <div class="grupo-2">
+          <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
+      </div>
+  </footer>
 
     <a href="https://api.whatsapp.com/send?phone=573183835434&text=Me interesa conocer más acerca de " class="btn-wsp" target="_blank">
       <i class="fa-brands fa-whatsapp"></i>
