--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            Cenigaa
+            <img src="../assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
