--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            Cenigaa
+            <img src="../assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,8 +73,11 @@
   
             <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
   
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-file-slides"></i></div>
+              <div class="icon-box nav-link">
+                <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" style="color: rgb(38, 82, 185);" width="38" height="38" fill="currentColor" class="bi bi-file-slides" viewBox="0 0 16 16">
+                  <path d="M5 4a.5.5 0 0 0-.496.438l-.5 4A.5.5 0 0 0 4.5 9h3v2.016c-.863.055-1.5.251-1.5.484 0 .276.895.5 2 .5s2-.224 2-.5c0-.233-.637-.429-1.5-.484V9h3a.5.5 0 0 0 .496-.562l-.5-4A.5.5 0 0 0 11 4H5zm2 3.78V5.22c0-.096.106-.156.19-.106l2.13 1.279a.125.125 0 0 1 0 .214l-2.13 1.28A.125.125 0 0 1 7 7.778z"/>
+                  <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+                </svg></div>
                 <h4 class="title"><a href="">Presentación</a></h4>
                 <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate maiores libero minima ut explicabo, quibusdam placeat, mollitia neque, culpa consectetur enim. Harum minima fugit nulla saepe natus, porro sequi quidem!</p>
