cambio en las páginas jóvenes investigadores, investigadores y pasantes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                   <a class="dropdown-item" href="./pages/pasantes.html">Pasantes</a>
                 </div>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Proyectos</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">CteI</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Academics</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Servicios</a>
+              </li>
             </ul>
         </div>
       </div>
@@ -97,25 +109,25 @@
 
     <div class="logos">
         <div class="logos-slide">
-          <img src="./assets/imagenes/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoUscoRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoSeiRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoEcopetrolRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoUscoRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoSeiRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
         </div>
   
         <div class="logos-slide">
-          <img src="./assets/imagenes/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoUscoRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoSeiRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoEcopetrolRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/imagenes/LogoUscoRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoSeiRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
         </div>
     </div>
 
@@ -127,13 +139,13 @@
           <div class="product-card">
             <h2 class="name">Feria Internacional del Cacao y el Café</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="./assets/imagenes/CacaoHuila.svg" alt="" class="product-img">
+            <img src="/assets/svg/CacaoHuila.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="./assets/imagenes/cacaoProject.jpg" alt="">
+                <img src="/assets/img/cacaoProject.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Fería Internacional del Cacao y el Café</h2>
@@ -146,13 +158,13 @@
           <div class="product-card">
             <h2 class="name">Cámara de Comercio, Visita Ecuador</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="./assets/imagenes/Cenigaa.svg" alt="" class="product-img">
+            <img src="/assets/svg/Cenigaa.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="./assets/imagenes/cámaraComercio.jpg" alt="">
+                <img src="/assets/img/cámaraComercio.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Cámara de Comercio, Visita Ecuador</h2>
@@ -165,13 +177,13 @@
           <div class="product-card">
             <h2 class="name">Huila Fest 4.0</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="./assets/imagenes/HuilaFest.svg" alt="" class="product-img">
+            <img src="/assets/svg/HuilaFest.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="./assets/imagenes/Huila4.0.jpg" alt="">
+                <img src="/assets/img/Huila4.0.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Huila Fest 4.0</h2>
@@ -186,11 +198,11 @@
       </a>
     </div>
 
-    <div class="card-services">
+    <!-- <div class="card-services">
       <h1 class="heading">Nuestros Servicios</h1>
       <div class="box-container">
         <div class="box">
-          <img src="/assets/imagenes/Gpro.svg" alt="Logo Gpro">
+          <img src="/assets/svg/Gpro.svg" alt="Logo Gpro">
           <h3>GPRO</h3>
           <p>
             Complementamos el conocimiento con diferentes herramientas para garantizar una experiencia no solo en servicio,
@@ -201,7 +213,7 @@
         </div>
 
         <div class="box">
-          <img src="/assets/imagenes/AgroBussines.svg" alt="Logo AgroBussines">
+          <img src="/assets/svg/AgroBussines.svg" alt="Logo AgroBussines">
           <h3>AGRO BUSSINESS</h3>
           <p>
             Agrobussines 4.0 es una plataforma tecnológica que mejora la posición del agricultor en la cadena de valor.
@@ -212,14 +224,14 @@
           <a href="#" class="btn"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <footer class="pie-pagina">
         <div class="group-1">
           <div class="box">
             <figure>
               <a href="#">
-                <img src="./assets/imagenes/Cenigaa.svg" alt="Logo Cenigaa">
+                <img src="/assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
               </a>
             </figure>
           </div>
