--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -112,14 +112,14 @@
                   </tr> 
               </tbody> 
           </table>
-      </div>
+    </div>
 
     <footer class="pie-pagina">
       <div class="grupo-1">
           <div class="box">
               <figure>
                   <a href="#">
-                      <img src="../assets/imagenes/Cenigaa.svg" alt="Logo Cenigaa">
+                      <img src="/assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
                   </a>
               </figure>
           </div>
@@ -153,7 +153,7 @@
       <div class="grupo-2">
           <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
       </div>
-  </footer>
+    </footer>
 
     <a href="https://api.whatsapp.com/send?phone=573183835434&text=Me interesa conocer más acerca de " class="btn-wsp" target="_blank">
       <i class="fa-brands fa-whatsapp"></i>
