--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,27 +7,16 @@
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/about.css">
-
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
- 
-     <link rel="stylesheet" href="../assets/css/Style.css">
-     <!-- Vendor CSS Files -->
-     <!-- <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-     <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="../assets/css/about.css"> -->
+     <link rel="stylesheet" href="../assets/css/nosotros.css">
     <title>Sobre Nosotros</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="../assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
+          <a class="navbar-brand" href="/index.html">
+            <img src="/assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="/index.html">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personal</a>
@@ -53,8 +42,8 @@
 
 
     <main id="main">
-       <!-- ======= Why Us Section ======= -->
-       <section class="why-us section-bg mt-5" data-aos="fade-up" date-aos-delay="200">
+      <!-- ======= Why Us Section ======= -->
+      <section class="why-us section-bg mt-5" data-aos="fade-up" date-aos-delay="200">
         <div class="container">
   
           <div class="row ">
@@ -84,10 +73,9 @@
       </section><!-- End Why Us Section -->
   
   
-     <!-- ======= Service Details Section ======= -->
-     <section class="service-details">
+      <!-- ======= Service Details Section ======= -->
+      <section class="service-details">
       <div class="container">
-  
         <div class="row">
           <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
@@ -112,7 +100,6 @@
                 
               </div>
             </div>
-  
           </div>
           <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
@@ -126,10 +113,10 @@
               </div>
             </div>
           </div>
-  
+        </div>
       </div>
-    </section>
-    <!-- End Service Details Section -->
+      </section>
+      <!-- End Service Details Section -->
     </main>
 
     <footer class="pie-pagina">
@@ -137,7 +124,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="../assets/imagenes/Cenigaa.svg" alt="Logo Cenigaa">
+                        <img src="/assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
                     </a>
                 </figure>
             </div>
@@ -177,16 +164,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Vendor JS Files -->
-    <!-- <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script> -->
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
