--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>Centro de Investigación en Ciencias y Recursos GeoAgroAmbientales - Cenigaa</title>
     <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    
 </head>
 <body>
 
@@ -88,7 +91,7 @@
             <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit quidem at consectetur voluptate magni voluptatem sapiente facilis. Nesciunt accusantium officiis pariatur voluptatum asperiores recusandae earum eaque cupiditate delectus libero in, eius praesentium deleniti voluptatibus totam, beatae accusamus amet similique aperiam neque? Quos at ratione dolorum iure, officia nisi eius, doloribus eveniet dicta ullam minus magni ut est fuga nemo voluptatem!
             </p>
-            <a href="/pages/nosotros.html" class="about-us">
+            <a href="./pages/nosotros.html" class="about-us">
               <button class="button">Conoce Más</button>
             </a>
           </div>
@@ -190,7 +193,7 @@
       <h1 class="heading">Nuestros Servicios</h1>
       <div class="box-container">
         <div class="box">
-          <img src="/assets/imagenes/Gpro.svg" alt="Logo Gpro">
+          <img src="./assets/imagenes/Gpro.svg" alt="Logo Gpro">
           <h3>GPRO</h3>
           <p>
             Complementamos el conocimiento con diferentes herramientas para garantizar una experiencia no solo en servicio,
@@ -201,7 +204,7 @@
         </div>
 
         <div class="box">
-          <img src="/assets/imagenes/AgroBussines.svg" alt="Logo AgroBussines">
+          <img src="./assets/imagenes/AgroBussines.svg" alt="Logo AgroBussines">
           <h3>AGRO BUSSINESS</h3>
           <p>
             Agrobussines 4.0 es una plataforma tecnológica que mejora la posición del agricultor en la cadena de valor.
@@ -236,9 +239,9 @@
           <div class="box">
             <h2>Contáctenos</h2>
             <ul class="footer-links">
-              <li><a href="#">Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso., Neiva, Colombia.</a></li>
-              <li><a href="#">info@cenigaa.org </a></li>
-              <li><a href="#">3183835434</a></li>
+              <li><p>Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso., Neiva, Colombia.</p></li>
+              <li><p>info@cenigaa.org </p></li>
+              <li><p>+57 3183835434</p></li>
             </ul>
           </div>
           <div class="box">
