--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,9 +7,6 @@
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<<<<<<< HEAD
-    
-    <link rel="stylesheet" href="../assets/css/about.css">
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
  
@@ -22,10 +19,10 @@
      <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
      <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
-=======
+
     <!-- <link rel="stylesheet" href="../assets/css/about.css"> -->
      <link rel="stylesheet" href="../assets/css/nosotros.css">
->>>>>>> 1da80603b2462b9cd3ab6aee2e3bdf32d60e0eab
+
     <title>Sobre Nosotros</title>
 </head>
 <body>
@@ -33,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="/index.html">
-            <img src="/assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
+            <img src="../assets/img/logo-cenigaa.png" alt="" style="width: 70px; height: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personal</a>
@@ -176,7 +173,7 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
+
     </section>
     <!-- End Service Details Section -->
 
@@ -318,10 +315,7 @@
     </section>
 
 
-=======
-      </section>
-      <!-- End Service Details Section -->
->>>>>>> 1da80603b2462b9cd3ab6aee2e3bdf32d60e0eab
+
     </main>
 
 
@@ -330,7 +324,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="/assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
+                        <img src="../assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
                     </a>
                 </figure>
             </div>
