--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
 
     <div class="logos">
         <div class="logos-slide">
-          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoSeiRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoSeiRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
         </div>
   
         <div class="logos-slide">
-          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoSeiRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="/assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoSeiRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
         </div>
     </div>
 
@@ -142,13 +142,13 @@
           <div class="product-card">
             <h2 class="name">Feria Internacional del Cacao y el Café</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="/assets/svg/CacaoHuila.svg" alt="" class="product-img">
+            <img src="./assets/svg/CacaoHuila.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="/assets/img/cacaoProject.jpg" alt="">
+                <img src="./assets/img/cacaoProject.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Fería Internacional del Cacao y el Café</h2>
@@ -161,13 +161,13 @@
           <div class="product-card">
             <h2 class="name">Cámara de Comercio, Visita Ecuador</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="/assets/svg/Cenigaa.svg" alt="" class="product-img">
+            <img src="./assets/svg/Cenigaa.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="/assets/img/cámaraComercio.jpg" alt="">
+                <img src="./assets/img/cámaraComercio.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Cámara de Comercio, Visita Ecuador</h2>
@@ -180,13 +180,13 @@
           <div class="product-card">
             <h2 class="name">Huila Fest 4.0</h2>
             <a class="popup-btn">Vista Rápida</a>
-            <img src="/assets/svg/HuilaFest.svg" alt="" class="product-img">
+            <img src="./assets/svg/HuilaFest.svg" alt="" class="product-img">
           </div>
           <div class="popup-view">
             <div class="popup-card">
               <a><i class="fas fa-times close-btn"></i></a>
               <div class="product-img">
-                <img src="/assets/img/Huila4.0.jpg" alt="">
+                <img src="./assets/img/Huila4.0.jpg" alt="">
               </div>
               <div class="info">
                 <h2>Huila Fest 4.0</h2>
@@ -205,11 +205,9 @@
       <h1 class="heading">Nuestros Servicios</h1>
       <div class="box-container">
         <div class="box">
-<<<<<<< HEAD
-          <img src="./assets/imagenes/Gpro.svg" alt="Logo Gpro">
-=======
+
           <img src="/assets/svg/Gpro.svg" alt="Logo Gpro">
->>>>>>> 1da80603b2462b9cd3ab6aee2e3bdf32d60e0eab
+
           <h3>GPRO</h3>
           <p>
             Complementamos el conocimiento con diferentes herramientas para garantizar una experiencia no solo en servicio,
@@ -220,11 +218,10 @@
         </div>
 
         <div class="box">
-<<<<<<< HEAD
-          <img src="./assets/imagenes/AgroBussines.svg" alt="Logo AgroBussines">
-=======
+
+          
           <img src="/assets/svg/AgroBussines.svg" alt="Logo AgroBussines">
->>>>>>> 1da80603b2462b9cd3ab6aee2e3bdf32d60e0eab
+
           <h3>AGRO BUSSINESS</h3>
           <p>
             Agrobussines 4.0 es una plataforma tecnológica que mejora la posición del agricultor en la cadena de valor.
@@ -242,7 +239,7 @@
           <div class="box">
             <figure>
               <a href="#">
-                <img src="/assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
+                <img src="./assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
               </a>
             </figure>
           </div>
