--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="/assets/fonts/icomoon/style.css">
-    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/jovenesInvestigadores.css">
@@ -36,13 +36,13 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
 
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="/index.html"><span>Inicio</span></a></li>
+              <li><a href="../index.html"><span>Inicio</span></a></li>
               <li class="has-children">
                 <a href="#"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
                   <li><a href="">Investigadores</a></li>
-                  <li><a href="/pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="/pages/pasantes.html">Pasantes</a></li>
+                  <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                  <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
               <li><a href="listings.html"><span>Proyectos</span></a></li>
@@ -69,7 +69,7 @@
   
           <div class="row ">
             <div class="col-lg-6 video-box mt-3 mb-3 ">
-              <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=LKNairAblH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fuG601kDCNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
   
             <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
@@ -98,7 +98,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="./img/team1.png" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>James</h4>
                   <span>Chief Executive Officer</span>
@@ -114,7 +114,7 @@
   
             <div class="col-lg-6 mt-4 mt-lg-0">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="./img/team2.png" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Benjamin</h4>
                   <span>Full-stack developer</span>
@@ -129,7 +129,7 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="./img/team3.png" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Amelia</h4>
                   <span>Senior software engineer</span>
@@ -144,7 +144,7 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="./img/team4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/team-5.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Charlotte</h4>
                   <span>Senior software engineer</span>
@@ -212,10 +212,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/assets/js/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/popper.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/jquery.sticky.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="../assets/js/jquery-3.3.1.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.sticky.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
