--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
               <li class="has-children">
                 <a href="#"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="/pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="/pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="/pages/pasantes.html">Pasantes</a></li>
+                  <li><a href="./pages/investigadores.html">Investigadores</a></li>
+                  <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                  <li><a href="./pages/pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
               <li><a href="#"><span>Proyectos</span></a></li>
@@ -131,24 +131,52 @@
     <div class="logos">
         <div class="logos-slide">
           <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
           <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoSeiRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCorhuila.png" alt=""/>
+          <img src="./assets/logos/Logo_FET.png" alt=""/>
           <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/Logo_sena.png" alt=""/>
+          <img src="./assets/logos/logo_Javeriana.svg.png" alt=""/>
+          <img src="./assets/logos/Logo_CSIC.png" alt=""/>
+          <img src="./assets/logos/red_nano.jpg" alt=""/>
+          <img src="./assets/logos/Logo_uniminuto.png" alt=""/>
+          <img src="./assets/logos/logo_lagsa.png" alt=""/>
+          <img src="./assets/logos/nano_citec.png" alt=""/>
+          <img src="./assets/logos/logo_ideam.png" alt=""/>
+          <img src="./assets/logos/logo_University_of_Oklahoma_seal.png" alt=""/>
+          <img src="./assets/logos/logo_mississippi.png" alt=""/>
+          <img src="./assets/logos/logo_texas.png" alt=""/>
+          <img src="./assets/logos/logo_ag2pi.png" alt=""/>
+          <img src="./assets/logos/logo_autonomaMexico.png" alt=""/>
+          <img src="./assets/logos/cio_logo.png" alt=""/>
+          <img src="./assets/logos/logo_sei.png" alt=""/>
+          <img src="./assets/logos/Logo_sociedadColombiana.png" alt=""/>
+          
         </div>
   
         <div class="logos-slide">
           <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
           <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoSeiRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoGobernacionRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoEcopetrolRedimensionado.png" alt=""/>
+          <img src="./assets/logos/LogoCorhuila.png" alt=""/>
+          <img src="./assets/logos/Logo_FET.png" alt=""/>
           <img src="./assets/logos/LogoCamRedimensionado.png" alt=""/>
-          <img src="./assets/logos/LogoUscoRedimensionado.png" alt=""/>
+          <img src="./assets/logos/Logo_sena.png" alt=""/>
+          <img src="./assets/logos/logo_Javeriana.svg.png" alt=""/>
+          <img src="./assets/logos/Logo_CSIC.png" alt=""/>
+          <img src="./assets/logos/red_nano.jpg" alt=""/>
+          <img src="./assets/logos/Logo_uniminuto.png" alt=""/>
+          <img src="./assets/logos/logo_lagsa.png" alt=""/>
+          <img src="./assets/logos/nano_citec.png" alt=""/>
+          <img src="./assets/logos/logo_ideam.png" alt=""/>
+          <img src="./assets/logos/logo_University_of_Oklahoma_seal.png" alt=""/>
+          <img src="./assets/logos/logo_mississippi.png" alt=""/>
+          <img src="./assets/logos/logo_texas.png" alt=""/>
+          <img src="./assets/logos/logo_ag2pi.png" alt=""/>
+          <img src="./assets/logos/logo_autonomaMexico.png" alt=""/>
+          <img src="./assets/logos/cio_logo.png" alt=""/>
+          <img src="./assets/logos/logo_sei.png" alt=""/>
+          <img src="./assets/logos/Logo_sociedadColombiana.png" alt=""/>
+          
         </div>
     </div>
 
@@ -359,10 +387,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/assets/js/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/popper.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/jquery.sticky.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/jquery-3.3.1.min.js"></script>
+    <script src="./assets/js/popper.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/jquery.sticky.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
