--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/califiaciónESAL.css">
-    <link rel="stylesheet" href="../estilos.css">
+    
     <link rel="stylesheet" href="../assets/css/Style.css">
     <title>Proceso de calificacion ESAL</title>
 </head>
