--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/jovenesInvestigadores.css">
-    <link rel="stylesheet" href="../estilos.css">
+    
     <link rel="stylesheet" href="../assets/css/Style.css">
 
     <title>Jóvenes Investigadores</title>
@@ -42,7 +42,7 @@
               <li class="has-children">
                 <a href="#"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="">Investigadores</a></li>
+                  <li><a href="./investigadores.html">Investigadores</a></li>
                   <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
                   <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
@@ -66,7 +66,8 @@
   </header>
 
     <main id="main">
-      <section class="why-us section-bg mt-5" data-aos="fade-up" date-aos-delay="200">
+      <!-- ======= Why Us Section ======= -->
+      <section class="why-us section-bg mt-5">
         <div class="container">
   
           <div class="row ">
@@ -81,9 +82,18 @@
                   <path d="M5 4a.5.5 0 0 0-.496.438l-.5 4A.5.5 0 0 0 4.5 9h3v2.016c-.863.055-1.5.251-1.5.484 0 .276.895.5 2 .5s2-.224 2-.5c0-.233-.637-.429-1.5-.484V9h3a.5.5 0 0 0 .496-.562l-.5-4A.5.5 0 0 0 11 4H5zm2 3.78V5.22c0-.096.106-.156.19-.106l2.13 1.279a.125.125 0 0 1 0 .214l-2.13 1.28A.125.125 0 0 1 7 7.778z"/>
                   <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
                 </svg></div>
-                <h4 class="title"><a href="#">Jóvenes Investigadores</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate maiores libero minima ut explicabo, quibusdam placeat, mollitia neque, culpa consectetur enim. Harum minima fugit nulla saepe natus, porro sequi quidem!</p>
+                <h4 class="title"><a href="">Jovenes Investigadores</a></h4>
+                <p class="description">La Fundación Centro de Investigación en
+                  Ciencias y Recursos GeoAgroAmbientales
+                  “CENIGAA”, integra los componentes del
+                  agro, la geología y las ciencias ambientales
+                  como base del conocimiento para el
+                  desarrollo regional sostenible. La
+                  transversalidad e integración de saberes gira
+                  entorno a la dinámica compleja de los
+                  recursos naturales involucrados en la
+                  producción agrícola.
+                  </p>
               </div>
   
               
@@ -93,7 +103,7 @@
           </div>
   
         </div>
-      </section>
+      </section><!-- End Why Us Section -->
 
       <section id="team" class="team section-bg">
         <div class="container">
