cambios pequeños, como la funcion filtro y el funcionamiento del navbar

--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -29,7 +29,7 @@
             <div class="col-11 col-xl-2">
               <h1 class="mb-0 site-logo">
               <a href="../index.html" class="text-black-50 mb-0">
-                Cenigaa
+                <img src="../assets/svg/Cenigaa.svg" width="100px" height="100px" alt="">
               </a>
             </h1>
             </div>
@@ -64,7 +64,7 @@
         
     </header>
 
-    <div class="container text-center" data-aos="fade-up">
+    <div class="container text-center mt-5" data-aos="fade-up">
 
       <main class="pt-5">
         <div class="Titulo mt-5">
