--- a/pages/pasantes.html
+++ b/pages/pasantes.html
@@ -16,7 +16,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/pasantes.css">
     <!-- <link rel="stylesheet" href="../estilos.css"> -->
-    <link rel="stylesheet" href="../assets/css/Style.css">
+    <!-- <link rel="stylesheet" href="../assets/css/Style.css"> -->
     <title>Pasantes</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
         <div class="col-11 col-xl-2">
           <h1 class="mb-0 site-logo">
           <a href="../index.html" class="text-black-50 mb-0">
-            Cenigaa
+            <img src="../assets/svg/Cenigaa.svg" width="100px" height="100px" alt="">
           </a>
         </h1>
         </div>
@@ -46,10 +46,10 @@
                   <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li><a href="listings.html"><span>Proyectos</span></a></li>
-              <li><a href="about.html"><span>CteI</span></a></li>
-              <li><a href="blog.html"><span>Academics</span></a></li>
-              <li><a href="contact.html"><span>Servicios</span></a></li>
+              <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
+              <li><a href="#"><span>CteI</span></a></li>
+              <li><a href="#"><span>Academics</span></a></li>
+              <li><a href="#"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
@@ -69,7 +69,7 @@
       <section class="why-us section-bg mt-5">
         <div class="container">
   
-          <div class="row ">
+          <div class="row mt-4">
             <div class="col-lg-6 video-box mt-3 mb-3 ">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fuG601kDCNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
