--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -16,7 +16,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/investigadores.css">
     
-    <link rel="stylesheet" href="../assets/css/Style.css">
+    <!-- <link rel="stylesheet" href="../assets/css/Style.css"> -->
     <title>Investigadores</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
         <div class="col-11 col-xl-2">
           <h1 class="mb-0 site-logo">
           <a href="../index.html" class="text-black-50 mb-0">
-            Cenigaa
+            <img src="../assets/svg/Cenigaa.svg" width="100px" height="100px" alt="">
           </a>
         </h1>
         </div>
@@ -46,10 +46,10 @@
                   <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li><a href="listings.html"><span>Proyectos</span></a></li>
-              <li><a href="about.html"><span>CteI</span></a></li>
-              <li><a href="blog.html"><span>Academics</span></a></li>
-              <li><a href="contact.html"><span>Servicios</span></a></li>
+              <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
+              <li><a href="#"><span>CteI</span></a></li>
+              <li><a href="#"><span>Academics</span></a></li>
+              <li><a href="#"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
@@ -57,19 +57,19 @@
 
         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
-        </div>
+      </div>
 
       </div>
     </div>
     
   </header>
 
-    <main id="main">
+  <main id="main">
       <!-- ======= Why Us Section ======= -->
       <section class="why-us section-bg mt-5">
         <div class="container">
   
-          <div class="row ">
+          <div class="row mt-4">
             <div class="col-lg-6 video-box mt-3 mb-3 ">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fuG601kDCNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
@@ -172,9 +172,9 @@
   
         </div>
       </section>
-    </main>
+  </main>
 
-    <footer class="pie-pagina">
+  <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
                 <figure>
@@ -213,14 +213,14 @@
         <div class="grupo-2">
             <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
         </div>
-    </footer>
+  </footer>
 
 
 
     <!-- Large modal -->
-    <button type="button" class="btn-wsp" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa-brands fa-whatsapp"></i></button>
+  <button type="button" class="btn-wsp" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa-brands fa-whatsapp"></i></button>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content fondo-cenigaa text-light">
           <div class="container text-center">
@@ -277,20 +277,15 @@
           </div>
         </div>
       </div>
-    </div>
+  </div>
 
-
-
-
-   
-    <!-- <script src="assets/js/main.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../assets/js/jquery-3.3.1.min.js"></script>
-    <script src="../assets/js/popper.min.js"></script>
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <script src="../assets/js/jquery.sticky.js"></script>
-    <script src="../assets/js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/jquery-3.3.1.min.js"></script>
+  <script src="../assets/js/popper.min.js"></script>
+  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="../assets/js/jquery.sticky.js"></script>
 </body>
 </html>
