--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,20 +19,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" /> -->
- 
-     <link rel="stylesheet" href="../assets/css/Style.css">
-     <!-- Vendor CSS Files -->
-     <!-- <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet"> -->
-     <!-- <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-     <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
-
-    
-
-
     <title>Sobre Nosotros</title>
 </head>
 <body>
@@ -46,7 +32,7 @@
         <div class="col-11 col-xl-2">
           <h1 class="mb-0 site-logo">
           <a href="../index.html" class="text-black-50 mb-0">
-            Cenigaa
+            <img src="../assets/svg/Cenigaa.svg" width="100px" height="100px" alt="">
           </a>
         </h1>
 
@@ -88,7 +74,7 @@
       <section class="why-us section-bg mt-5">
         <div class="container">
   
-          <div class="row ">
+          <div class="row mt-4">
             <div class="col-lg-6 video-box mt-3 mb-3 ">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fuG601kDCNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
@@ -468,17 +454,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-      <!-- Vendor JS Files -->
-<!--     <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script> -->
- 
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
