--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
 
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="/index.html"><span>Inicio</span></a></li>
+              <li class="active"><a href="./index.html"><span>Inicio</span></a></li>
               <li class="has-children">
                 <a href="#"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
@@ -50,7 +50,7 @@
                   <li><a href="./pages/pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li><a href="/pages/proyectos.html"><span>Proyectos</span></a></li>
+              <li><a href="./pages/proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
               <li><a href="#"><span>Academics</span></a></li>
               <li><a href="#"><span>Servicios</span></a></li>
