modulo de noticias y eventos

--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
             </ul>
           </nav>
         </div>
-
-
         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
         </div>
@@ -240,7 +238,7 @@
           </div>
       </div>
   
-      <a class="wrap">
+      <a class="wrap" href="./pages/noticias-eventos.html">
         <button class="button">Ver Más</button>
       </a>
   </div>
