--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,6 +23,14 @@
 </head>
 <body>
 
+  <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close mt-3">
+        <span class="icon-close2 js-menu-toggle"></span>
+      </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
 
     <header class="site-navbar" role="banner">
 
@@ -50,16 +58,16 @@
                   <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li><a href="listings.html"><span>Proyectos</span></a></li>
-              <li><a href="about.html"><span>CteI</span></a></li>
-              <li><a href="blog.html"><span>Academics</span></a></li>
-              <li><a href="contact.html"><span>Servicios</span></a></li>
+              <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
+              <li><a href="#"><span>CteI</span></a></li>
+              <li><a href="#"><span>Academics</span></a></li>
+              <li><a href="#"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
 
 
-        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px; color: #000;"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu h3"></span></a></div>
 
         </div>
 
@@ -67,7 +75,6 @@
     </div>
     
     </header>
-
 
     <main id="main">
       <!-- ======= Why Us Section ======= -->
@@ -343,7 +350,6 @@
 
     </main>
 
-
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -447,9 +453,6 @@
      </div>
    </div>
 
-
-
-
     <!-- <script src="../assets/js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -457,13 +460,10 @@
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
-
-    <script src="../assets/js/script.js"></script>
-
     <script src="../assets/js/jquery-3.3.1.min.js"></script>
     <script src="../assets/js/popper.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/jquery.sticky.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <!-- <script src="../assets/js/main.js"></script> -->
 
 </html>
