--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -22,6 +22,15 @@
 </head>
 <body>
 
+  <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close mt-3">
+        <span class="icon-close2 js-menu-toggle"></span>
+      </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
+
   <header class="site-navbar" role="banner">
 
     <div class="container">
@@ -56,7 +65,7 @@
         </div>
 
 
-        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px; color: #000;"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu h3"></span></a></div>
 
         </div>
 
@@ -276,10 +285,6 @@
         </div>
       </div>
     </div>
-
-
-
-
 
     <!-- <script src="assets/js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
