--- a/pages/pasantes.html
+++ b/pages/pasantes.html
@@ -21,6 +21,15 @@
 </head>
 <body>
 
+  <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close mt-3">
+        <span class="icon-close2 js-menu-toggle"></span>
+      </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
+
   <header class="site-navbar" role="banner">
 
     <div class="container">
@@ -55,16 +64,16 @@
         </div>
 
 
-        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px; color: #000;"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu h3"></span></a></div>
 
         </div>
 
       </div>
     </div>
     
-    </header>
+  </header>
 
-    <main id="main">
+  <main id="main">
       <!-- ======= Why Us Section ======= -->
       <section class="why-us section-bg mt-5">
         <div class="container">
@@ -172,9 +181,9 @@
   
         </div>
       </section>
-    </main>
+  </main>
 
-    <footer class="pie-pagina">
+  <footer class="pie-pagina">
       <div class="grupo-1">
           <div class="box">
               <figure>
@@ -276,10 +285,6 @@
       </div>
     </div>
   </div>
-
-
-
-    
 
     <!-- <script src="assets/js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
