se trabajo en el modulo de noticias y eventos y academics

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
               </li>
               <li><a href="./pages/proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
-              <li><a href="#"><span>Academics</span></a></li>
-              <li><a href="./pages/academics.html"><span>Servicios</span></a></li>
+              <li><a href="./pages/academics.html"><span>Academics</span></a></li>
+              <li><a href="#"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
