--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -47,10 +47,10 @@
                       <li><a href="./pasantes.html">Pasantes</a></li>
                     </ul>
                   </li>
-                  <li><a href="listings.html"><span>Proyectos</span></a></li>
-                  <li><a href="about.html"><span>CteI</span></a></li>
-                  <li><a href="blog.html"><span>Academics</span></a></li>
-                  <li><a href="contact.html"><span>Servicios</span></a></li>
+                  <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
+                  <li><a href="#"><span>CteI</span></a></li>
+                  <li><a href="./academics.html"><span>Academics</span></a></li>
+                  <li><a href="#"><span>Servicios</span></a></li>
                 </ul>
               </nav>
             </div>
