--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
               </li>
               <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
-              <li><a href="#"><span>Academics</span></a></li>
+              <li><a href="./academics.html"><span>Academics</span></a></li>
               <li><a href="#"><span>Servicios</span></a></li>
             </ul>
           </nav>
