--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <li><a href="./pages/proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
               <li><a href="./pages/academics.html"><span>Academics</span></a></li>
-              <li><a href="#"><span>Servicios</span></a></li>
+              <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
