--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -54,10 +54,10 @@
                   <li><a href="./pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li class="active"><a href="./proyectos.html"><span>Proyectos</span></a></li>
+              <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
               <li><a href="./academics.html"><span>Academics</span></a></li>
-              <li><a href="#"><span>Servicios</span></a></li>
+              <li><a href="./servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
@@ -446,24 +446,15 @@
 
       
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<<<<<<< HEAD
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="../assets/js/main.js"></script>
-=======
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
->>>>>>> 5643a32a73e828222805e71586dfc51ea7b4c524
     <script src="../assets/js/jquery-3.3.1.min.js"></script>
     <script src="../assets/js/popper.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/jquery.sticky.js"></script>
     <script src="../assets/js/main.js"></script>
-<<<<<<< HEAD
     <script src="../assets/js/proyecto.js"></script>
-=======
-
-    <script src="../assets/js/proyecto.js"></script>
-
->>>>>>> 5643a32a73e828222805e71586dfc51ea7b4c524
 </body>
 </html>
